--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -2,29 +2,38 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <th:block th:fragment="Meta">
     <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    </th:block>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Title</title>
 </head>
 <body>
 
+
+
+
 <th:block th:fragment="navbar">
     <div sec:authorize="hasAuthority('USER')">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <nav class="navbar navbar-expand-lg navbar-light primary">
+        <a class="navbar-brand" href="#">BullHorn 2.0</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcontent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link2</a>
+                    <a class="nav-link" href="/home">Home</a>
                 </li>
                 <li sec:authorize="isAuthenticated()" class="nav-link text-warning" th:inline="text">
                 <span th:text="${#authentication.name}"></span>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link3</a>
+                <li sec:authorize="isAuthenticated()" class="nav-item">
+                    <a class="nav-link" href="#">Add Message</a>
                 </li>
             </ul>
+            <div>
+                <a href="https://www.linkedin.com/" target="_blank"><img width="20px" src="https://res.cloudinary.com/jleplerwt/image/upload/v1562858739/WeeklyChallenge/1200px-Linkedin.svg_qxnby6.png" alt="LinkedIn Image"/></a>
+                <a href="https://twitter.com/?lang=en" target="_blank"><img width="20px" src="https://res.cloudinary.com/jleplerwt/image/upload/v1562858711/WeeklyChallenge/_65QFl7B_op8jpu.png" alt="Twitter Image"/></a>
+                <a href="https://www.facebook.com/" target="_blank"><img width="20px" src="https://res.cloudinary.com/jleplerwt/image/upload/v1562858701/WeeklyChallenge/fb_icon_325x325_qejlhv.png" alt="Facebook Image"/></a>
+            </div>
         </div>
     </nav>
     </div>
