--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,11 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
                 xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <th:block th:replace="base :: Meta">...</th:block>
-    <title>Registration</title>
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Title</title>
 </head>
+<div th:replace="base :: navbar"></div>
 <body>
-<th:block th:replace="base :: nav">...</th:block>
+
 <h4>New User Registration</h4>
 <form autocomplete="off" action="#" th:action="@{/register}" th:object="${user}" method="post">
 
@@ -43,6 +45,6 @@
     <button type="submit" class="btn btn-default">Submit</button>
 
 </form>
-<th:block th:replace="base :: bootstrap">...</th:block>
+<div th:replace="base :: bootstrap"></div>
 </body>
 </html>
