--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -11,11 +11,11 @@
 
 
 
-<th:block th:fragment="navbar">
+<div th:fragment="navbar">
     <div sec:authorize="hasAuthority('USER')">
     <nav class="navbar navbar-expand-lg navbar-light primary">
         <a class="navbar-brand" href="#">BullHorn 2.0</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navcontent" aria-controls="navcontent" aria-expanded="true" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcontent">
             <ul class="navbar-nav ml-auto">
@@ -26,9 +26,13 @@
                 <span th:text="${#authentication.name}"></span>
                 </li>
                 <li sec:authorize="isAuthenticated()" class="nav-item">
-                    <a class="nav-link" href="#">Add Message</a>
+                    <a class="nav-link" href="/add">Add Message</a>
+                </li>
+                <li sec:authorize="isAuthenticated()" class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
                 </li>
             </ul>
+
             <div>
                 <a href="https://www.linkedin.com/" target="_blank"><img width="20px" src="https://res.cloudinary.com/jleplerwt/image/upload/v1562858739/WeeklyChallenge/1200px-Linkedin.svg_qxnby6.png" alt="LinkedIn Image"/></a>
                 <a href="https://twitter.com/?lang=en" target="_blank"><img width="20px" src="https://res.cloudinary.com/jleplerwt/image/upload/v1562858711/WeeklyChallenge/_65QFl7B_op8jpu.png" alt="Twitter Image"/></a>
@@ -37,13 +41,13 @@
         </div>
     </nav>
     </div>
-</th:block>
+</div>
 
-<th:block th:fragment="bootstrap">
+<div sec:authorize="hasAuthority('USER')" th:fragment="bootstrap">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</th:block>
+</div>
 </body>
 </html>
 
