--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="col-4 card" style="padding: 0px" th:each="message : ${messages}">
             <div class="card-body">
-                <h3 class="card-title" th:inline="text">Posted By: [[${message.postedBy}]]</h3>
+                <h3 class="card-title" th:inline="text">Posted By: [[${message.user.username}]]</h3>
                 <h4 class="card-text" th:inline="text">[[${message.title}]]"</h4>
                 <h5 th:inline="text">Message: [[${message.content}]]</h5>
                 <h6 th:inline="text">Posted on: [[${message.postedDate}]]</h6><br/>
@@ -31,5 +31,8 @@
 </div>
 
 <div th:replace="base :: bootstrap"></div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
